--- a/login backend/.classpath
+++ b/login backend/.classpath
@@ -10,17 +10,18 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/10.2.0/server/jdbc/lib/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="C:/oraclexe/app/oracle/product/10.2.0/server/jdbc/lib/ojdbc14_g.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/aop/com.springsource.net.sf.cglib-2.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/aop/com.springsource.org.aopalliance-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/aop/com.springsource.org.aspectj.weaver-1.6.8.RELEASE.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/aop/org.springframework.aop-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/aop/org.springframework.aspects-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/aop/org.springframework.instrument.tomcat-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/aop/org.springframework.instrument-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/persistCore/org.springframework.jdbc-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/persistCore/org.springframework.orm-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/persistCore/org.springframework.transaction-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/persistCore/persistence.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/jstl.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/core/com.springsource.org.apache.commons.logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/core/com.springsource.org.apache.log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/core/jmxtools-1.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/core/org.springframework.asm-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/core/org.springframework.beans-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/core/org.springframework.context-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/core/org.springframework.core-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/core/org.springframework.expression-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/web/org.springframework.web-3.0.1.RELEASE-A.jar"/>
 	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/web/com.springsource.org.apache.commons.fileupload-1.2.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/web/com.springsource.org.apache.commons.httpclient-3.1.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/web/com.springsource.org.codehaus.jackson.mapper-1.0.0.jar"/>
@@ -28,9 +29,9 @@
 	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/web/org.springframework.web.portlet-3.0.1.RELEASE-A.jar"/>
 	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/web/org.springframework.web.servlet-3.0.1.RELEASE-A.jar"/>
 	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/web/org.springframework.web.struts-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/web/org.springframework.web-3.0.1.RELEASE-A.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/Tomcat 8.0/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/jstl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/persistCore/org.springframework.jdbc-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/persistCore/org.springframework.orm-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/persistCore/org.springframework.transaction-3.0.1.RELEASE-A.jar"/>
+	<classpathentry kind="lib" path="C:/Users/sidha/Desktop/spring1/spring jars/springjars/persistCore/persistence.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
